# oraculum

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml
configs/: anthropic.yaml  ollama.yaml  openai.yaml  openrouter.yaml
examples/: basic_usage.py  custom_provider.py  custom_reverence.py  from_config.py
oraculum/: __init__.py  exceptions.py  factory.py  models.py  oracle.py  prayers.py
oraculum/config/: __init__.py  loader.py  schema.py
oraculum/parser/: __init__.py  formula.py  nodes.py  parser.py  pretty.py  tokenizer.py  tokens.py  visitors.py
oraculum/providers/: __init__.py  anthropic.py  ollama.py  openai.py  openrouter.py  protocol.py
tests/: test_factory.py  test_models.py  test_oracle.py  test_oracle_mock.py  test_prayers.py
tests/config/: test_loader.py
tests/parser/: test_formula.py  test_parser.py  test_pretty.py  test_tokenizer.py
tests/providers/: test_providers_complete.py  test_registry.py
