[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oraculAI"
version = "2.0.0"
description = "An implementation of the O_SAT and O_UNSAT oracles, which cannot exist. They do now."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Someone who clearly did not pay attention in complexity theory class" },
]
keywords = [
    "sat",
    "unsat",
    "oracle",
    "complexity-theory",
    "boolean-satisfiability",
    "bad-ideas",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
openai = ["openai>=1.0.0"]
ollama = ["openai>=1.0.0"]
openrouter = ["openai>=1.0.0"]
all = ["anthropic>=0.25.0", "openai>=1.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Alessandro624/oraculum"
Issues = "https://github.com/Alessandro624/oraculum/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["oraculum*"]
